// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cascader[Base] should render correctly  1`] = `
<div>
  <div
    class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty soui-cascader-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
        >
          <span
            class="soui-cascader-placeholder soui-cascader-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about compressed 1`] = `
<div>
  <div
    class="soui-cascader soui-cascader-wrapper soui-cascader-clearable soui-cascader-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-compressed-wrapper soui-cascader-multiple-result-wrapper soui-cascader-multiple-compressed-wrapper"
        >
          <span
            style="display: inline-flex;"
          >
            <div
              class="soui-cascader-tag soui-tag soui-tag-tag soui-tag-default soui-tag-bright"
            >
              <div
                class="soui-tag-wrapper"
              >
                <span>
                  +7
                </span>
              </div>
            </div>
          </span>
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-clear-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 23C5.924 23 1 18.076 1 12C1 5.924 5.924 1 12 1C18.076 1 23 5.924 23 12C23 18.076 18.076 23 12 23Z"
              fill="currentColor"
            />
            <path
              d="M9.6129 8.2097C9.22061 7.90468 8.65338 7.93241 8.29289 8.29289C7.90237 8.68342 7.90237 9.31658 8.29289 9.70711L10.413 11.828L8.29289 13.9497L8.2097 14.044C7.90468 14.4362 7.93241 15.0035 8.29289 15.364C8.68342 15.7545 9.31658 15.7545 9.70711 15.364L11.828 13.242L13.9497 15.364L14.044 15.4471C14.4362 15.7522 15.0035 15.7244 15.364 15.364C15.7545 14.9734 15.7545 14.3403 15.364 13.9497L13.242 11.828L15.364 9.70711L15.4471 9.6129C15.7522 9.22061 15.7244 8.65338 15.364 8.29289C14.9734 7.90237 14.3403 7.90237 13.9497 8.29289L11.828 10.413L9.70711 8.29289L9.6129 8.2097Z"
              fill="white"
            />
          </svg>
        </span>
        <span
          class="soui-cascader-compressed-icon soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about disabled 1`] = `
<div
  style="display: flex; flex-wrap: wrap; gap: 32px; width: 632px;"
>
  <div
    class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty soui-cascader-wrapper-disabled"
    data-soui-input-border="true"
    style="width: 300px;"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
        >
          <span
            class="soui-cascader-placeholder soui-cascader-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty soui-cascader-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
        >
          <span
            class="soui-cascader-placeholder soui-cascader-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-disabled"
    data-soui-input-border="true"
    style="width: 300px;"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
        >
          <div
            class="soui-cascader-tag soui-tag soui-tag-tag soui-tag-default soui-tag-bright soui-tag-disabled"
            data-soui-type="dark"
          >
            <div
              class="soui-tag-wrapper soui-tag-inline"
            >
              <span>
                jiangsu
              </span>
            </div>
          </div>
          <div
            class="soui-cascader-tag soui-tag soui-tag-tag soui-tag-default soui-tag-bright soui-tag-disabled"
            data-soui-type="dark"
          >
            <div
              class="soui-tag-wrapper soui-tag-inline"
            >
              <span>
                nanjing
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty soui-cascader-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
        >
          <span
            class="soui-cascader-placeholder soui-cascader-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about filter 1`] = `
<div
  style="display: flex; gap: 32px;"
>
  <div
    class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty"
    data-soui-input-border="true"
    style="width: 300px;"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
        >
          <input
            autocomplete="off"
            placeholder="Please select city"
            style="width: 100%;"
            value=""
          />
          <span
            class="soui-cascader-input-mirror"
          />
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty"
    data-soui-input-border="true"
    style="width: 300px;"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
        >
          <input
            autocomplete="off"
            placeholder="Please select city"
            style="width: 100%;"
            value=""
          />
          <span
            class="soui-cascader-input-mirror"
          />
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about final 1`] = `
<div>
  <div
    class="soui-form-item-wrapper"
    data-soui-status="default"
  >
    <div
      class="soui-form-item-label"
    >
      Single
    </div>
    <div
      class="soui-form-item-control"
      data-soui-role="form-control"
    >
      <div
        class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty"
        data-soui-input-border="true"
      >
        <div
          class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
        >
          <div
            class="soui-cascader-result"
          >
            <div
              class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
            >
              <input
                autocomplete="off"
                style="width: 100%;"
                value=""
              />
              <span
                class="soui-cascader-input-mirror"
              />
            </div>
          </div>
          <div
            class="soui-cascader-icon-wrapper"
          >
            <span
              class="soui-cascader-arrow-icon"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-form-item-wrapper"
    data-soui-status="default"
  >
    <div
      class="soui-form-item-label"
    >
      multiple
    </div>
    <div
      class="soui-form-item-control"
      data-soui-role="form-control"
    >
      <div
        class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty"
        data-soui-input-border="true"
      >
        <div
          class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
        >
          <div
            class="soui-cascader-result"
          >
            <div
              class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
            >
              <input
                autocomplete="off"
                style="width: 100%;"
                value=""
              />
              <span
                class="soui-cascader-input-mirror"
              />
            </div>
          </div>
          <div
            class="soui-cascader-icon-wrapper"
          >
            <span
              class="soui-cascader-arrow-icon"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about finalDismiss 1`] = `
<div>
  <div
    class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
        >
          <span
            class="soui-cascader-placeholder soui-cascader-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about hideTag 1`] = `
<div>
  <div
    class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty soui-cascader-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
        >
          <span
            class="soui-cascader-placeholder soui-cascader-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about innerTitle 1`] = `
<div>
  <div
    class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty soui-cascader-wrapper-inner-title soui-cascader-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-inner-title-wrapper"
      >
        <div
          class="soui-inner-title-title soui-inner-title-top"
        >
          Inner Title
        </div>
        <div
          class="soui-inner-title-place"
        >
          <div
            class="soui-inner-title-title"
          >
            Inner Title
          </div>
        </div>
        <div
          class="soui-inner-title-content"
        >
          <div
            class="soui-cascader-result"
          >
            <div
              class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
            >
              <span
                class="soui-cascader-placeholder soui-cascader-ellipsis"
              >
                <span>
                  Please select city
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about loader 1`] = `
<div>
  <div
    class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
        >
          <span
            class="soui-cascader-placeholder soui-cascader-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about multiple 1`] = `
<div>
  <div
    class="soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked soui-radio-wrapper-small"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        模式 0
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-small"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        模式 1
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-small"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        模式 2
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-small"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        模式 3
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-small"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        模式 4
      </span>
    </div>
  </div>
  <div
    style="display: flex;"
  >
    <div
      style="flex: 1;"
    >
      <div
        class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty soui-cascader-clearable soui-cascader-multiple"
        data-soui-input-border="true"
        style="width: 300px;"
        tabindex="0"
      >
        <div
          class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
        >
          <div
            class="soui-cascader-result"
          >
            <div
              class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
            >
              <span
                class="soui-cascader-placeholder soui-cascader-ellipsis"
              >
                <span>
                  Please select city
                </span>
              </span>
            </div>
          </div>
          <div
            class="soui-cascader-icon-wrapper"
          >
            <span
              class="soui-cascader-compressed-icon soui-cascader-arrow-icon"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <pre
      style="flex: 1; margin: 10px; background: rgb(29, 29, 29); color: rgb(148, 213, 252); border-radius: 4px; padding: 10px;"
    >
      <div
        style="margin-bottom: 10px;"
      >
        <code
          style="color: rgb(93, 142, 78);"
        >
          <span>
            /
          </span>
          <span>
            /
          </span>
           DataItem[]
        </code>
      </div>
      <code
        style="color: rgb(117, 117, 117);"
      >
        no data
      </code>
    </pre>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about noRepeat 1`] = `
<div>
  <div
    class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty soui-cascader-clearable soui-cascader-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-compressed-wrapper soui-cascader-multiple-result-wrapper soui-cascader-multiple-compressed-wrapper"
        >
          <span
            class="soui-cascader-placeholder soui-cascader-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-compressed-icon soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about renderResult 1`] = `
<div>
  <div
    class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty soui-cascader-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
        >
          <span
            class="soui-cascader-placeholder soui-cascader-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about trigger 1`] = `
<div>
  <div
    class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
        >
          <span
            class="soui-cascader-placeholder soui-cascader-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about unmatch 1`] = `
<div>
  <div
    class="soui-cascader soui-cascader-wrapper"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
        >
          <div
            class="soui-cascader-tag soui-tag soui-tag-tag soui-tag-default soui-tag-bright"
          >
            <div
              class="soui-tag-wrapper soui-tag-inline"
            >
              <span>
                Unmatched: shanghai
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about wide 1`] = `
<div
  style="display: flex; gap: 32px;"
>
  <div
    class="soui-cascader soui-cascader-wrapper soui-cascader-wrapper-empty"
    data-soui-input-border="true"
    style="width: 300px;"
  >
    <div
      class="soui-cascader-result-wrapper soui-cascader-wrapper-padding-box soui-cascader-wrapper-inner-title-top soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="soui-cascader-result"
      >
        <div
          class="soui-cascader-result-text-wrapper soui-cascader-multiple-result-wrapper"
        >
          <input
            autocomplete="off"
            placeholder="Please select city"
            style="width: 100%;"
            value=""
          />
          <span
            class="soui-cascader-input-mirror"
          />
        </div>
      </div>
      <div
        class="soui-cascader-icon-wrapper"
      >
        <span
          class="soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;
